--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.0",
     "express-useragent": "^0.2.4",
     "geoip-lite": "^1.1.8",
-    "mongoose": "^4.5.9"
+    "mongoose": "^4.5.9",
+    "redis": "^2.6.2"
   }
 }
